<resources>
    <string name="app_name">Urdoctors-UserApp</string>
    <string name="google_maps_key">AIzaSyC-F4Wo71f3YU-gHjVjCkExaRnZj5vH4nU</string>
    <string name="password">Password</string>
    <string name="ok">Ok</string>
    <string name="usd_sign">$</string>

    <!-- Welcome Page-->
    <string name="title1">Welcome to Illaj</string>
    <string name="msg1">We help you take care of your health better</string>
    <string name="title2">Ask A Doctor Online</string>
    <string name="msg2">Consult online with them for any kind of medical assistance</string>
    <string name="title3">Helth Monitoring</string>
    <string name="msg3">Illaj can help you follow your diet keep moving sleep better.</string>
    <string name="login">Login</string>
    <string name="title_activity_home">ActivityHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="skip">Skip</string>
    <string name="web_client_id">255260786379-vpbccrr6ti0mehv3pdkbt3ghsq741lot.apps.googleusercontent.com</string>
    <!-- Home Page-->
    <string name="you_don_t_have_any_appointmnets">You Don\'t Have any Appointmnets</string>
    <string name="you_don_t_have_any_booking">You Don\'t Have Test Booking</string>
    <string name="you_don_t_have_any_order">You Don\'t Have any Order</string>
    <string name="you_don_t_have_any_reminder">You Don\'t Have any Reminder</string>
    <string name="you_don_t_have_any_medical_record">You Don\'t Have any Medical Record</string>
    <string name="you_don_t_have_any_payment">You Don\'t Have any Payment</string>
    <string name="test_booking">Test Booking</string>
    <string name="appointments">AppointMents</string>
    <string name="orders">Orders</string>
    <string name="medical_record">Medical Record</string>
    <string name="reminder">Reminder</string>
    <string name="payment">Payment</string>
    <string name="don_t_have_an_account">Don\'t Have An Account ?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="login_with_google">Login with Google</string>
    <string name="doctor_s">Doctor\'s</string>
    <string name="clinic">Clinic</string>
    <string name="medicine_s">Medicine\'s</string>
    <string name="find_a_drug">Find a Drug</string>
    <string name="lab_nursing">Lab at home</string>
    <string name="sample_collection_at_home">Sample Collection at Home</string>
    <string name="medicine">medicine</string>


    <!-- Activity Profile-->
    <string name="general_information">General Information</string>
    <string name="email">Email</string>
    <string name="blood_group">Blood Group</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_blood_group">Enter blood group</string>
    <string name="enter_gender">Enter gender</string>
    <string name="update">Update</string>
    <string name="change_password">Change Password</string>
    <string name="profile_details">Profile Details</string>
    <string name="update_profile">Update Profile</string>
    <string name="home_nursing">Home Nursing</string>
    <string name="home_vaccination">Home Vaccination</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clinic_list">Clinic List</string>
    <string name="title_activity_amb_map">Map</string>
    <string name="personal_information">Personal Information</string>
    <string name="working_address">Working Address</string>
    <string name="ratting_reviews">Ratting/Reviews</string>
    <string name="book_appointment">Book AppointMent</string>
    <string name="about">About</string>
    <string name="address_timeing"><![CDATA[Address & Timeing]]></string>
    <string name="phone">Phone</string>
    <string name="certificate">Certificate</string>
    <string name="ratting_review">Ratting Review</string>
    <string name="book_now">Book Now</string>
    <string name="checkup_category">CheckUp Category</string>
    <string name="delivery_drug">Delivery Drug</string>
    <string name="upload">Upload</string>
    <string name="confirm">Confirm</string>

    <!--doctor list profile related-->
    <string name="nurse_confirm">
  Home Nursing is confirmed After confirmation of the Nurse ,you will be notified.
</string>
    <string name="fee_details">Consultation fee : <font color='#ffa500'>$300</font></string>
    <string name="vacc_confirm">Home Vaccination is confirmed After confirmation of the vaccinator ,you will be notified.</string>
    <string name="contact_us">Contact us</string>
    <string name="confirm_now">Confirm Now</string>
    <string name="upload_reciept">Upload Reciept</string>
    <string name="submit">Submit</string>
    <string name="Degree">Degree</string>
    <string name="about_doctor">About Doctor</string>
</resources>
