<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.common.activity.OTHER_Activity.ActivityEditProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/textview12white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/update_profile" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rel_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="315dp"
                    android:background="@drawable/gradiant_bg"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="@dimen/_135sdp"
                        android:layout_height="@dimen/_135sdp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_20sdp">

                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/profile_image"
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center"
                            android:layout_marginTop="0dp"
                            android:src="@drawable/ic_profile"
                            app:civ_border_color="@android:color/white"
                            app:civ_border_width="2dp" />

                        <ImageView
                            android:id="@+id/iv_edit"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_centerInParent="true"
                            android:layout_marginRight="@dimen/_15sdp"
                            android:layout_marginBottom="@dimen/_15sdp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_menu_camera" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_190sdp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="@dimen/_10sdp"
                            android:weightSum="3">

                            <EditText
                                android:id="@+id/et_phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/edittext_bottom_line"
                                android:hint="@string/enter_contact_number"
                                android:imeOptions="actionNext"
                                android:inputType="number"
                                android:maxLength="10"
                                android:padding="@dimen/_10sdp" />

                        <EditText
                                android:id="@+id/et_location"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/edittext_bottom_line"
                                android:hint="@string/enter_location"
                                android:imeOptions="actionNext"
                                android:inputType="text"
                                android:padding="@dimen/_10sdp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:id="@+id/card1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="8dp"
                            app:cardCornerRadius="8dp"
                            app:cardElevation="5dp"
                            app:contentPadding="@dimen/_10sdp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="20dp"
                                android:orientation="vertical"
                                android:weightSum="3">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <TextView
                                        style="@style/textview16black_bold"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:padding="@dimen/_10sdp"
                                        android:text="@string/general_information"
                                        android:textStyle="bold" />
                                </LinearLayout>

                                <EditText
                                    android:id="@+id/et_email"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/_10sdp"
                                    android:background="@drawable/edittext_bottom_line"
                                    android:hint="Email Id"
                                    android:imeOptions="actionNext"
                                    android:inputType="textEmailAddress"
                                    android:padding="@dimen/_10sdp" />

                                <EditText
                                    android:id="@+id/et_gender"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/_10sdp"
                                    android:background="@drawable/edittext_bottom_line"
                                    android:hint="@string/enter_gender"
                                    android:imeOptions="actionNext"
                                    android:inputType="text"
                                    android:padding="@dimen/_10sdp" />

                                <EditText
                                    android:id="@+id/et_blood"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/_10sdp"
                                    android:background="@drawable/edittext_bottom_line"
                                    android:hint="@string/enter_blood_group"
                                    android:imeOptions="actionGo"
                                    android:inputType="text"
                                    android:padding="@dimen/_10sdp" />
-->

                                <TextView
                                    android:id="@+id/changepass"
                                    style="@style/textview14lightblack_bold"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginBottom="@dimen/_20sdp"
                                    android:background="@drawable/edittext_bottom_line"
                                    android:padding="@dimen/_10sdp"
                                    android:singleLine="true"
                                    android:text="@string/change_password"
                                    android:textStyle="bold" />

                                <Button
                                    android:id="@+id/btn_update"
                                    android:layout_width="@dimen/_150sdp"
                                    android:layout_height="@dimen/_40sdp"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="@dimen/_20sdp"
                                    android:background="@drawable/btn_bg"
                                    android:gravity="center"
                                    android:padding="@dimen/_10sdp"
                                    android:text="@string/update"
                                    android:textColor="#ffffff" />


                            </LinearLayout>

                        </androidx.cardview.widget.CardView>


                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>


        </RelativeLayout>


    </ScrollView>
</LinearLayout>