<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.common.activity.OTHER_Activity.ActivityPersonalInfo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/textview12white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Personal Info" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

       <!-- <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="8dp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp"
            app:contentPadding="@dimen/_10sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/textview14black_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/about" />

                <TextView
                    style="@style/textview12black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/about"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:text="sdfsfsdfsaffasfsdfasdfasdfasfsfsdfasdfsfasfsadfsfsdfsfffasfasdfasfsdffsffsfsdfsadfsf" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>-->

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="8dp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp"
            app:contentPadding="@dimen/_10sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/textview14black_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/working_address" />

                <TextView
                    style="@style/textview12black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:id="@+id/address"
                    android:gravity="center_vertical"
                    android:text="Bombay hospital indore" />

              <!--  <TextView
                    style="@style/textview12black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:id="@+id/time"
                    android:gravity="center_vertical"
                    android:text="12pm - 6pm (Mon - sat)" />-->

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="8dp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp"
            app:contentPadding="@dimen/_10sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/textview14black_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/phone" />

                <TextView
                    style="@style/textview12black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:id="@+id/phone"
                    android:gravity="center_vertical"
                    android:text="+91 1234567890" />

               <!-- <TextView
                    style="@style/textview12black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:text="+91 1234567890" />-->

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="8dp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp"
            app:contentPadding="@dimen/_10sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/textview14black_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/Degree" />

                <TextView
                    style="@style/textview12black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/degree"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:text="Micro soft" />

               <!-- <TextView
                    style="@style/textview12black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:text="Cloud" />-->

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="8dp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp"
            app:contentPadding="@dimen/_10sdp">


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/textview14black_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/about_doctor" />

                <TextView
                    style="@style/textview12black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:id="@+id/textabout"
                    android:gravity="center_vertical"
                    android:text="about doctor description" />

                <!-- <TextView
                     style="@style/textview12black"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawablePadding="@dimen/_5sdp"
                     android:gravity="center_vertical"
                     android:text="+91 1234567890" />-->

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>